--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -3683,6 +3683,7 @@ button.aboutTabsIner {
 }
 .profilePkgIner2 {
     padding: 22px 28px;
+    min-height: 150vh;
 }
 .profileInfoDate .react-date-picker {
     display: block !important;
@@ -3817,7 +3818,7 @@ button.aboutTabsIner {
 .mkFmlyDoc {
     border-radius: 12px;
     background-color: #FAFAFA;
-    padding: 15px 15px;
+    padding: 7px 7px;
 }
 .mkFmlyDoc p {
     color: #7F8383;
@@ -4056,8 +4057,523 @@ button.aboutTabsIner {
     width: 100%;
     border: none;
 }
+.secureChain h4 {
+    color: #000808;
+    font-family: Muli;
+    font-size: 20px;
+    font-weight: bold;
+    letter-spacing: 0;
+    line-height: 32px;
+}
+.secureChain p {
+    color: #7F8383;
+    font-family: Muli;
+    font-size: 14px;
+    font-weight: 500;
+    letter-spacing: 0;
+    line-height: 18px;
+}
+.secureChain {
+    margin-bottom: 15px;
+}
+.organDeclare h5 {
+    margin-bottom: 15px;
+    color: #000808;
+    font-family: Muli;
+    font-size: 14px;
+    font-weight: bold;
+    letter-spacing: 0;
+    line-height: 14px;
+}
+.organDeclare label {
+    margin-right: 0px;
+    margin-bottom: 0px;
+}
+.organDeclare label span {
+    color: #404646;
+    font-family: Muli;
+    font-size: 14px;
+    font-weight: 600;
+    letter-spacing: 0;
+    line-height: 14px;
+    margin-right: 0px;
+}
+.organDeclare {
+    margin-top: 28px;
+}
+.organDeclare span.MuiIconButton-label {
+    color: #00ABAF !important;
+}
+.donarLang label {
+    color: #404646;
+    font-family: Muli;
+    font-size: 12px;
+    font-weight: 600;
+    letter-spacing: 0;
+    line-height: 12px;
+}
+.donarLang .css-yk16xz-control {
+    border: 1px solid #BFC1C1 !important;
+    border-radius: 4px;
+    background-color: #FFFFFF;
+}
+.donarLang .css-1pahdxg-control{
+    /* border-color: #2684FF;
+    border-radius: 4px;
+    border-style: solid; */
+    border-color: none !important;
+    border-width: none !important;
+    box-shadow: initial !important;
+}
+.organDecide {
+    margin-top: 24px;
+}
+.organDecide label span {
+    color: #404646;
+    font-family: Muli;
+    font-size: 14px;
+    font-weight: 600;
+    letter-spacing: 0;
+    line-height: 14px;
+    margin-right: 0px;
+}
+.organDecide span.MuiIconButton-label {
+    color: #00ABAF !important;
+}
+.organDecide label {
+    margin-right: 0px;
+}
+.donarForm label {
+    color: #404646;
+    font-family: Muli;
+    font-size: 12px;
+    font-weight: 600;
+    letter-spacing: 0;
+    line-height: 12px;
+}
+.donarForm input {
+    border: 1px solid #BFC1C1;
+    border-radius: 4px;
+    background-color: #FFFFFF;
+    width: 100%;
+    padding: 9px 8px;
+    color: #000808;
+    font-family: Muli;
+    font-size: 14px;
+    font-weight: 600;
+    letter-spacing: 0;
+    line-height: 18px;
+    outline: none;
+}
+.donarForm input.form-control {
+    width: 100%;
+    height: initial !important;
+    min-height: initial !important;
+    line-height: initial !important;
+}
+.donarFormSubmit input[type="submit"] {
+    border-radius: 8px;
+    background-color: #00ABAF;
+    color: #FFFFFF;
+    font-family: Muli;
+    font-size: 14px;
+    font-weight: bold;
+    letter-spacing: 0;
+    line-height: 16px;
+    text-align: center;
+    padding: 13px 0px;
+    margin-top: 14px;
+    width: 100%;
+    border: none;
+    margin-bottom: 132px;
+    outline: none;
+}
+.donarForm .form-control:focus {
+    border-color: none !important;
+    box-shadow: none !important;
+}
+.rghtMgnt h5 {
+    color: #000808;
+    font-family: Muli;
+    font-size: 20px;
+    font-weight: bold;
+    letter-spacing: 0;
+    line-height: 32px;
+    margin-bottom: 4px;
+}
+.rghtMgnt p {
+    color: #7F8383;
+    font-family: Muli;
+    font-size: 14px;
+    font-weight: 500;
+    letter-spacing: 0;
+    line-height: 18px;
+}
+.emrgncyAccess span.MuiFormControlLabel-label {
+    color: #404646;
+    font-family: Muli;
+    font-size: 14px;
+    font-weight: 600;
+    letter-spacing: 0;
+    line-height: 14px;
+}
+.rghtMgnt, .otpAccess {
+    margin-bottom: 32px;
+}
+.emrgncyAccess {
+    margin-bottom: 24px;
+}
+.emrgncyAccess span.MuiIconButton-label {
+    color: #00ABAF;
+}
+.otpAccess span.MuiFormControlLabel-label {
+    color: #404646;
+    font-family: Muli;
+    font-size: 14px;
+    font-weight: 600;
+    letter-spacing: 0;
+    line-height: 14px;
+}
+.otpAccess span.MuiIconButton-label {
+    color: #00ABAF;
+}
+.otpAccess p {
+    color: #7F8383;
+    font-family: Muli;
+    font-size: 13px;
+    font-weight: 500;
+    letter-spacing: 0;
+    line-height: 18px;
+    padding-left: 32px;
+    margin-top: -6px;
+    margin-bottom: 8px;
+}
+.otpAccess label.MuiFormControlLabel-root{
+    margin-right: 0px;
+    margin-bottom: 0px;
+}
+.spcifyKind span.MuiFormControlLabel-label{
+    color: #404646;
+    font-family: Muli;
+    font-size: 14px;
+    font-weight: 600;
+    letter-spacing: 0;
+    line-height: 14px;
+}
+.spcifyKind span.MuiIconButton-label{
+    color: #00ABAF;
+}
+.spcifyKind label{
+    margin-right: 0px;
+    margin-bottom: 0px;
+}
+.emrgncyAccess label{
+    margin-bottom: 0px;
+}
+.emrgncyAccess p, .otpAccess h5, .spcifyKind h5{
+    color: #000808;
+    font-family: Muli;
+    font-size: 14px;
+    font-weight: bold;
+    letter-spacing: 0;
+    line-height: 14px;
+    margin-bottom: 10px;
+}
+.rghtMgntBtn input[type="submit"]{
+    border-radius: 8px;
+    background-color: #00ABAF;
+    border: none;
+    color: #FFFFFF;
+    font-family: Muli;
+    font-size: 14px;
+    font-weight: bold;
+    letter-spacing: 0;
+    line-height: 16px;
+    text-align: center;
+    width: 100%;
+    padding: 13px 10px;
+    outline: none !important;
+}
+.vsblAllTim .react-date-picker__wrapper{
+    border: 1px solid #BFC1C1;
+    border-radius: 4px;
+    background-color: #FFFFFF;
+    padding: 3px 4px;
+    outline: none;
+    width: 95%;
+    color: #000808;
+    font-family: Muli;
+    font-size: 14px;
+    font-weight: 600;
+    letter-spacing: 0;
+    line-height: 18px;
+}
+.vsblAllTim .react-date-picker{
+    display: block !important;
+}
+.vsblAllTim{
+    padding-left: 32px;
+    margin-bottom: 26px;
+}
+.vsblAllTim input, .vsblAllTim button, .vsblAllTim svg{
+    outline: none !important;
+}
+.vsblAllTim .MuiInput-underline:before{
+    content: initial !important;
+}
+.vsblAllTim .MuiInput-underline:after{
+    content: initial !important;
+}
+.vsblAllTim input{
+    border: 1px solid #BFC1C1;
+    border-radius: 4px;
+    background-color: #FFFFFF;
+    padding: 10px 8px;
+    color: #000808;
+    font-family: Muli;
+    font-size: 14px;
+    font-weight: 600;
+    letter-spacing: 0;
+    line-height: 18px;
+}
+.vsblAllTim .MuiFormControl-root.MuiTextField-root{
+    width: 95%;
+}
+.patientKyc h5 {
+    color: #000808;
+    font-family: Muli;
+    font-size: 20px;
+    font-weight: bold;
+    letter-spacing: 0;
+    line-height: 32px;
+}
+.patientKyc p {
+    color: #7F8383;
+    font-family: Muli;
+    font-size: 14px;
+    font-weight: 500;
+    letter-spacing: 0;
+    line-height: 18px;
+}
+.cntryDropKyc .css-yk16xz-control {
+    height: initial !important;
+    min-height: initial;
+    color: #000808;
+    font-family: Muli;
+    font-size: 14px;
+    font-weight: 600;
+    letter-spacing: 0;
+    line-height: 18px;
+}
+.kycForms label {
+    color: #404646;
+    font-family: Muli;
+    font-size: 12px;
+    font-weight: 600;
+    letter-spacing: 0;
+    line-height: 12px;
+}
+.patientKyc {
+    margin-bottom: 32px;
+}
+.kycForms input[type="text"] {
+    border: 1px solid #BFC1C1;
+    border-radius: 4px;
+    background-color: #FFFFFF;
+    width: 100%;
+    padding: 9px 8px;
+    color: #000808;
+    font-family: Muli;
+    font-size: 14px;
+    font-weight: 600;
+    letter-spacing: 0;
+    line-height: 18px;
+    outline: none;
+}
+.kycForms {
+    margin-bottom: 14px;
+}
+.browsInput {
+    border: 2px dashed #BFC1C1;
+    border-radius: 4px;
+    background-color: #FFFFFF;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    min-height: 120px;
+    display: flex;
+    color: #7F8383;
+    font-family: Muli;
+    font-size: 14px;
+    font-weight: 600;
+    letter-spacing: 0;
+    line-height: 18px;
+}
+.browsInput a {
+    color: #00ABAF !important;
+    margin: 0px 4px;
+}
+.browsInput input[type="file"] {
+    opacity: 0;
+    position: absolute;
+    left: 0;
+    top: 45px;
+    z-index: 999;
+}
+.browsInput {
+    position: relative;
+}
+.sprtImg p {
+    color: #7F8383;
+    font-family: Muli;
+    font-size: 12px;
+    font-weight: 600;
+    letter-spacing: 0;
+    line-height: 12px;
+    text-align: center;
+    margin-top: 10px;
+    margin-bottom: 0px !important;
+}
+.aceptTermsPlcy span {
+    color: #404646;
+    font-family: Muli;
+    font-size: 14px;
+    font-weight: 600;
+    letter-spacing: 0;
+    line-height: 14px;
+}
+.aceptTermsPlcy span.MuiIconButton-label {
+    color: #00ABAF !important;
+}
+.kycSaveChng input[type="submit"] {
+    border-radius: 8px;
+    background-color: #00ABAF;
+    border: none;
+    width: 100%;
+    color: #FFFFFF;
+    font-family: Muli;
+    font-size: 14px;
+    font-weight: bold;
+    letter-spacing: 0;
+    line-height: 16px;
+    text-align: center;
+    padding: 14px 4px;
+    outline: none;
+}
+.licensProof p {
+    color: #7F8383;
+    font-family: Muli;
+    font-size: 12px;
+    font-weight: 600;
+    letter-spacing: 0;
+    line-height: 16px;
+    margin-bottom: 10px;
+}
+.licensProof {
+    margin-top: 40px;
+}
+
+.datTimFrmt h5 {
+    color: #000808;
+    font-family: Muli;
+    font-size: 20px;
+    font-weight: bold;
+    letter-spacing: 0;
+    line-height: 32px;
+}
+.datTimFrmt p {
+    color: #7F8383;
+    font-family: Muli;
+    font-size: 14px;
+    font-weight: 500;
+    letter-spacing: 0;
+    line-height: 18px;
+}
+.dateFormat .react-date-picker, .timeFormat .react-time-picker {
+    border: 1px solid #BFC1C1;
+    border-radius: 4px;
+    background-color: #FFFFFF;
+    width: 100%;
+    display: block !important;
+    color: #000808;
+    font-family: Muli;
+    font-size: 14px;
+    font-weight: 600;
+    letter-spacing: 0;
+    line-height: 18px;
+    padding: 3px 4px;
+}
+.dateFormat .react-date-picker__wrapper, .timeFormat .react-time-picker__wrapper {
+    border: none;
+}
+.dateFormat label, .timeFormat label{
+    color: #404646;
+    font-family: Muli;
+    font-size: 12px;
+    font-weight: 600;
+    letter-spacing: 0;
+    line-height: 12px;
+}
+.datTimFrmt {
+    margin-bottom: 32px;
+}
+.dateFormat input, .dateFormat button, .timeFormat input, .timeFormat button, .timeFormat select {
+    outline: none;
+}
+.dateFormat, .timeFormat {
+    margin-bottom: 18px;
+}
+.timDatSubmit input[type="submit"] {
+    outline: none !important;
+    border-radius: 8px;
+    background-color: #00ABAF;
+    border: none;
+    width: 100%;
+    color: #FFFFFF;
+    font-family: Muli;
+    font-size: 14px;
+    font-weight: bold;
+    letter-spacing: 0;
+    line-height: 16px;
+    text-align: center;
+    padding: 13px 8px;
+    display: block;
+}
+
+/* loader css */
+body {
+    position: relative;
+}
+.dataLoader img {
+    position: absolute;
+    left: 10%;
+    right: 10%;
+    top: 15%;
+    text-align: center;
+    margin: 0 auto;
+}
+.dataLoader {
+    position: fixed;
+    background: #0000002e;
+    width: 100%;
+    min-height: 100vh;
+    left: 0;
+    top: 0;
+    z-index: 9;
+}
 
 /*Added By ankita*/
+/*For Organ Donor*/
+.OrganMobile .flag-select {
+    height: 37px;
+}
+.OrganMobile .flag-select__btn:after {
+    margin-top: 6%;
+}
+.OrganMobile span.flag-select__option.flag-select__option--placeholder .flag-select__option__icon {
+    top: 0px !important;
+}
+/*End Organ Donor*/
 /* For Profile Page */
 .profilMenuList ul li:last-child {
     margin-top: 10px !important;
@@ -4123,4 +4639,5 @@ button.aboutTabsIner {
 input:focus {
     outline: unset !important;
   }
+  
 /*Ended By Ankita*/
