--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1726,7 +1726,7 @@ a.profilMenu {
         min-height: auto;
         border-right: none !important;
         border-bottom: 2px solid #ececec;
-        margin-bottom: 68px !important;
+        margin-bottom: 25px !important;
     }
     .menuItems ul li:last-child {
         margin-top: 0px !important;
@@ -1797,6 +1797,18 @@ a.profilMenu {
     }
     .infoSub {
         margin-top: 35px;
+    }
+    .scndOpinion {
+        margin-left: 0px !important;
+        margin-top: 0px !important;
+        padding: 0px 12px;
+    }
+    .ScndOpinRght {
+        text-align: left !important;
+    }
+    .opinBoxCntnt {
+        width: 96% !important;
+        margin-top: 14px !important;
     }
 }
 .menuItems ul li ul li {
@@ -3818,7 +3830,7 @@ button.aboutTabsIner {
 .mkFmlyDoc {
     border-radius: 12px;
     background-color: #FAFAFA;
-    padding: 7px 7px;
+    padding: 15px 15px;
 }
 .mkFmlyDoc p {
     color: #7F8383;
@@ -4541,6 +4553,7 @@ button.aboutTabsIner {
 }
 
 /* loader css */
+
 body {
     position: relative;
 }
@@ -4560,6 +4573,423 @@ body {
     left: 0;
     top: 0;
     z-index: 9;
+}
+/* End of loader css */
+
+.scndOpinion {
+    margin-left: 70px;
+    margin-top: 41px;
+}
+.scndOpinion label {
+    color: #000808;
+    font-family: Muli;
+    font-size: 28px;
+    font-weight: bold;
+    letter-spacing: 0;
+    line-height: 40px;
+    margin-bottom: 0px;
+}
+.ScndOpinLbl a {
+    border-radius: 8px;
+    background-color: #00ABAF;
+    color: #FFFFFF !important;
+    font-family: Muli;
+    font-size: 14px;
+    font-weight: bold;
+    letter-spacing: 0;
+    line-height: 16px;
+    text-align: center;
+    padding: 12px 20px;
+    display: inline-block;
+    cursor: pointer;
+}
+.ScndOpinRght {
+    text-align: right;
+}
+.scndOpinionIner {
+    border-radius: 12px;
+    background-color: #FFFFFF;
+    box-shadow: 0 1px 8px 0 rgba(0,8,8,0.04);
+    min-height: 150vh;
+}
+.ScndOpinLbl {
+    margin-bottom: 30px;
+}
+.scndOpinionIner thead {
+    border-bottom: 1px solid #D9DADA;
+}
+.scndOpinionIner thead th {
+    padding: 16px 25px;
+    color: #7F8383;
+    font-family: Muli;
+    font-size: 12px;
+    font-weight: 600;
+    letter-spacing: 0;
+    line-height: 12px;
+}
+.scndOpinionIner td.pivoted {
+    padding: 14px 25px;
+    color: #000808;
+    font-family: Muli;
+    font-size: 14px;
+    font-weight: 600;
+    letter-spacing: 0;
+    line-height: 18px;
+}
+.scndOpinionIner tbody tr {
+    border-bottom: 1px solid #F2F2F2;
+}
+.scndOpinionIner tr .drImg img {
+    width: 16px;
+    border-radius: 12px;
+    vertical-align: middle;
+    margin-right: 10px;
+}
+.scndOpinionIner td.drEditDot img {
+    height: 15px;
+    width: 15px;
+    cursor: pointer;
+}
+span.revwYelow, span.revwGry, span.revwGren {
+    width: 10px;
+    height: 10px;
+    display: inline-block;
+    background-color: #FECA57;
+    vertical-align: initial;
+    border-radius: 14px;
+    margin-right: 10px;
+}
+span.revwYelow{
+    background-color: #FECA57;
+}
+span.revwGry{
+    background-color: #7F8383;
+}
+span.revwGren {
+    background-color: #1DD1A1;
+}
+
+/* second option model */
+.opinBoxCntnt {
+    padding: 1px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    width: 420px;
+    background: #fff;
+    margin: 0 auto;
+    border: none;
+    outline: none;
+    border-radius: 12px;
+    background-color: #FFFFFF;
+    box-shadow: 0 24px 32px 0 rgba(0,8,8,0.08);
+    margin-top: 35px;
+}
+.opinCourse {
+    padding: 12px 24px 18px 24px;
+    border-bottom: 1px solid #F2F2F2;
+}
+.opinCloseBtn {
+    text-align: right;
+    margin-bottom: 4px;
+}
+.opinCloseBtn img {
+    width: 26px;
+    cursor: pointer;
+}
+.opinCourse label {
+    color: #000808;
+    font-family: Muli;
+    font-size: 20px;
+    font-weight: bold;
+    letter-spacing: 0;
+    line-height: 32px;
+    margin-bottom: 2px;
+}
+.shrHlthChk span {
+    color: #404646;
+    font-family: Muli;
+    font-size: 14px;
+    font-weight: 600;
+    letter-spacing: 0;
+    line-height: 14px;
+}
+.shrHlthChk span.MuiIconButton-label {
+    color: #BFC1C1 !important;
+}
+.shrHlthMain {
+    padding: 22px 24px 22px 24px;
+}
+.shrHlth h2 {
+    color: #000808;
+    font-family: Muli;
+    font-size: 14px;
+    font-weight: bold;
+    letter-spacing: 0;
+    line-height: 14px;
+    margin-bottom: 8px;
+}
+.shrHlth p {
+    color: #7F8383;
+    font-family: Muli;
+    font-size: 14px;
+    font-weight: 500;
+    letter-spacing: 0;
+    line-height: 18px;
+    margin-bottom: 12px;
+}
+.stndrdQues h3 {
+    color: #000808;
+    font-family: Muli;
+    font-size: 14px;
+    font-weight: bold;
+    letter-spacing: 0;
+    line-height: 14px;
+    margin-bottom: 12px;
+}
+.splestQues label {
+    color: #404646;
+    font-family: Muli;
+    font-size: 12px;
+    font-weight: 600;
+    letter-spacing: 0;
+    line-height: 12px;
+}
+.stndrdQues {
+    margin-top: 32px;
+}
+.splestQues .css-yk16xz-control{
+    border: 1px solid #BFC1C1;
+    border-radius: 4px;
+    background-color: #FFFFFF;
+}
+.recevPrescpLbl label {
+    color: #404646;
+    font-family: Muli;
+    font-size: 12px;
+    font-weight: 600;
+    letter-spacing: 0;
+    line-height: 12px;
+}
+
+.recevPrescpChk span {
+    color: #404646;
+    font-family: Muli;
+    font-size: 14px;
+    font-weight: 600;
+    letter-spacing: 0;
+    line-height: 14px;
+}
+.recevPrescpChk span.MuiIconButton-label {
+    color: #00ABAF !important;
+}
+.recevPrescpChk label {
+    margin-bottom: 0px;
+}
+.recevPrescpChk label:last-child {
+    margin-right: 0px;
+}
+.yrProfes label {
+    color: #404646;
+    font-family: Muli;
+    font-size: 12px;
+    font-weight: 600;
+    letter-spacing: 0;
+    line-height: 12px;
+}
+.yrProfes input {
+    border: 1px solid #BFC1C1;
+    border-radius: 4px;
+    background-color: #FFFFFF;
+    width: 100%;
+    outline: none;
+    padding: 6px 8px;
+}
+.yrProfes textarea {
+    border: 1px solid #BFC1C1;
+    border-radius: 4px;
+    background-color: #FFFFFF;
+    width: 100%;
+    resize: none;
+    outline: none;
+    padding: 8px 10px;
+    min-height: 135px;
+}
+.opinBoxCntntIner {
+    overflow-y: scroll;
+    height: 560px;
+}
+.splestQues, .recevPrescp, .yrProfes, .attchForms{
+    margin-bottom: 18px;
+}
+
+.attchForms label {
+    color: #404646;
+    font-family: Muli;
+    font-size: 12px;
+    font-weight: 600;
+    letter-spacing: 0;
+    line-height: 12px;
+}
+.attchbrowsInput {
+    position: relative;
+}
+.attchbrowsInput {
+    border: 2px dashed #BFC1C1;
+    border-radius: 4px;
+    background-color: #FFFFFF;
+    text-align: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -ms-flex-align: center;
+    align-items: center;
+    min-height: 120px;
+    display: -ms-flexbox;
+    display: flex;
+    color: #7F8383;
+    font-family: Muli;
+    font-size: 14px;
+    font-weight: 600;
+    letter-spacing: 0;
+    line-height: 18px;
+}
+.attchbrowsInput a {
+    color: #00ABAF !important;
+    margin: 0px 4px;
+}
+.attchbrowsInput input[type="file"] {
+    opacity: 0;
+    position: absolute;
+    left: 0;
+    top: 45px;
+    z-index: 999;
+}
+.attchImg p {
+    color: #7F8383;
+    font-family: Muli;
+    font-size: 12px;
+    font-weight: 600;
+    letter-spacing: 0;
+    line-height: 12px;
+    text-align: center;
+    margin-top: 10px;
+    margin-bottom: 0px !important;
+}
+.infoShwHid {
+    color: #7F8383;
+    font-family: Muli;
+    font-size: 14px;
+    font-weight: 600;
+    letter-spacing: 0;
+    line-height: 18px;
+}
+.infoShwHidBrdr {
+    border-top: 1px solid #dedede;
+    margin-bottom: 14px;
+}
+.infoShwHidIner {
+    padding: 5px 24px 22px 24px;
+}
+.editShwHid {
+    text-align: right;
+}
+.editShwHid a {
+    color: #00ABAF;
+    font-family: Muli;
+    font-size: 14px;
+    font-weight: 600;
+    letter-spacing: 0;
+    line-height: 18px;
+    cursor: pointer;
+}
+.infoShwHidMain {
+    background-color: #F2F2F2;
+    padding: 8px 15px;
+    border-radius: 4px;
+}
+
+.infoShwSave input {
+    border-radius: 8px;
+    background-color: #00ABAF;
+    width: 100%;
+    color: #FFFFFF;
+    font-family: Muli;
+    font-size: 14px;
+    font-weight: bold;
+    letter-spacing: 0;
+    line-height: 16px;
+    text-align: center;
+    border: none;
+    padding: 12px 8px;
+    margin-top: 22px;
+    margin-bottom: 2px;
+    outline: none;
+}
+.emrgncyDataUpr {
+    padding-left: 70px;
+    background: #f7f7f7;
+    min-height: 150vh;
+    padding-top: 45px;
+}
+.emrgncyData h1 {
+    color: #000808;
+    font-family: Muli;
+    font-size: 28px;
+    font-weight: bold;
+    letter-spacing: 0;
+    line-height: 40px;
+    margin-bottom: 28px;
+}
+.healthStatus h2 {
+    color: #000808;
+    font-family: Muli;
+    font-size: 20px;
+    font-weight: bold;
+    letter-spacing: 0;
+    line-height: 32px;
+    margin-bottom: 20px;
+}
+.healthStatus .MuiGrid-container {
+    width: 100% !important;
+}
+.medicalNotify {
+    border-radius: 12px;
+    background-color: #FFFFFF;
+    box-shadow: 0 8px 16px 0 rgba(0,8,8,0.08);
+}
+.medicalLabl label {
+    color: #00B0DB;
+    font-family: Muli;
+    font-size: 14px;
+    font-weight: bold;
+    letter-spacing: 0;
+    line-height: 14px;
+    margin-bottom: 0px;
+}
+.medicalLabl {
+    border-bottom: 1px solid #F2F2F2;
+    padding: 12px 18px;
+}
+.medicalDesp p {
+    color: #7F8383;
+    font-family: Muli;
+    font-size: 14px;
+    font-weight: 600;
+    letter-spacing: 0;
+    line-height: 14px;
+}
+.medicalDesp {
+    padding: 18px 18px;
+    min-height: 84px;
+}
+.medicalDesp a {
+    color: #000808 !important;
+    font-family: Muli;
+    font-size: 14px;
+    font-weight: 600;
+    letter-spacing: 0;
+    line-height: 14px;
+    margin-bottom: 8px;
+    display: block;
 }
 
 /*Added By ankita*/
@@ -4635,6 +5065,27 @@ body {
     margin-top: 30px;
 }
 /* Not Found Page End */
+
+/*KYC Pages start*/
+.attached_file{
+    font-weight: 900 !important;
+}
+ul.insuranceHint {
+    z-index: 9;
+    position: absolute;
+    padding-left: 0px;
+    border-radius: 7px;
+    box-shadow: 0 0px 0px 0 rgba(0, 0, 0, 0.2), 0 0px 13px 0 rgba(0, 0, 0, 0.19);
+    overflow: auto;
+    background: #fff;
+    margin-top: 5px;
+    padding: 3px 0px;
+}
+ul.insuranceHint li {
+    padding: 8px 5px 8px 12px;
+}
+/*KYC Pages end*/
+
 /*Stop the outline comes from Comet Chat*/
 input:focus {
     outline: unset !important;
