--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -6166,6 +6166,8 @@ a.openScndhrf {
     background-color: #F2F2F2;
     min-height: 232px;
     padding: 10% 12px;
+    height: 300px;
+    overflow: auto;
 }
 .archvDel ul li {
     list-style-type: none;
@@ -8452,3 +8454,4 @@ input:focus {
 }
 /* For family Doctor End*/
 /*Ended By Ankita*/
+
