--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -5928,9 +5928,14 @@ img.addBlue {
     border-radius: 12px;
     background-color: #FFFFFF;
     box-shadow: 0 8px 16px 0 rgba(0,8,8,0.08);
+    direction: "row";
 }
 .trckLogo img {
     height: 24px;
+}
+.trckLogo1 img{
+    height:"auto";
+    min-width: 160px
 }
 .trckDots img {
     height: 24px;
@@ -5975,6 +5980,9 @@ img.addBlue {
 }
 .trckSecIner {
     padding: 22px 16px 0px 16px;
+}
+.trckSecIner1 {
+    padding: 10px 12px 0px 16px;
 }
 .trackView {
     padding: 8px 4px;
