--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -65,6 +65,7 @@ h1,h2,h3,h4,h5,h6,h7,p{ margin:0; padding:0; font-size: inherit; font-weight: in
     cursor: pointer;
     text-decoration: none;
 }
+
 .menuItems ul li a span {
     display: block;
     color: #7F8383;
@@ -1914,6 +1915,9 @@ a.profilMenu {
         text-align: initial !important;
     }
     .infoBoxCntnt {
+        width: 96% !important;
+    }
+    .dataBoxCntnt {
         width: 96% !important;
     }
 }
@@ -7782,9 +7786,28 @@ a.vsblDots2 img {
     width: 100%;
     padding: 10px 12px;
     outline: none;
+    color: #000808;
+    font-family: Muli;
+    font-size: 14px;
+    font-weight: 600;
+    letter-spacing: 0;
+    line-height: 18px;
 }
 .rrSysto {
     margin-bottom: 18px;
+    position: relative;
+}
+span.dosMg {
+    color: #000808;
+    font-family: Muli;
+    font-size: 14px;
+    font-weight: 600;
+    letter-spacing: 0;
+    line-height: 18px;
+    text-align: center;
+    position: absolute;
+    right: 40px;
+    bottom: 12px;
 }
 .rrInput {
     position: relative;
@@ -8889,8 +8912,386 @@ a.menuActv img {
     text-decoration: none;
 }
 
+.dataBoxCntnt {
+    width: 420px;
+    background: #fff;
+    margin: 0 auto;
+    border: none;
+    outline: none;
+    border-radius: 12px;
+    background-color: #FFFFFF;
+    -webkit-box-shadow: 0 24px 32px 0 rgba(0,8,8,0.08);
+    box-shadow: 0 24px 32px 0 rgba(0,8,8,0.08);
+    margin-top: 35px;
+}
+.dataCourse {
+    padding: 12px 24px 18px 24px;
+    border-bottom: 1px solid #F2F2F2;
+}
+.dataCloseBtn {
+    text-align: right;
+    margin-bottom: 4px;
+}
+.dataCloseBtn img {
+    width: 26px;
+    cursor: pointer;
+}
+.dataCourse label {
+    color: #000808;
+    font-family: Muli;
+    font-size: 20px;
+    font-weight: bold;
+    letter-spacing: 0;
+    line-height: 32px;
+    margin-bottom: 2px;
+}
+.dataCourse p {
+    color: #7F8383;
+    font-family: Muli;
+    font-size: 14px;
+    font-weight: 500;
+    letter-spacing: 0;
+    line-height: 18px;
+}
+.dataBoxUpr {
+    padding: 15px 24px 24px 24px;
+}
+.dataBoxInput label {
+    color: #404646;
+    font-family: Muli;
+    font-size: 12px;
+    font-weight: 600;
+    letter-spacing: 0;
+    line-height: 12px;
+}
+.dataBoxInput input {
+    border: 1px solid #BFC1C1;
+    border-radius: 4px;
+    background-color: #FFFFFF;
+    width: 100%;
+    outline: none;
+    padding: 10px 10px;
+    color: #000808;
+    font-family: Muli;
+    font-size: 14px;
+    font-weight: 600;
+    letter-spacing: 0;
+    line-height: 18px;
+    margin-bottom: 14px;
+}
+.dataBoxSub input[type="submit"] {
+    color: #FFFFFF;
+    font-family: Muli;
+    font-size: 14px;
+    font-weight: bold;
+    letter-spacing: 0;
+    line-height: 16px;
+    text-align: center;
+    border-radius: 8px;
+    background-color: #00ABAF;
+    outline: none;
+    border: none;
+    width: 100%;
+    padding: 14px 12px;
+    margin-top: 6px;
+}
+  .entrpatId input::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+    color: #000808;
+  }
+  .entrpatId input::-moz-placeholder { /* Firefox 19+ */
+    color: #000808;
+  }
+  .entrpatId input:-ms-input-placeholder { /* IE 10+ */
+    color: #000808;
+  }
+  .entrpatId input:-moz-placeholder { /* Firefox 18- */
+    color: #000808;
+  }
+  .datePickCstm .react-date-picker{
+    width: 100%;
+}
+.datePickCstm .react-date-picker__wrapper {
+    border: 1px solid #BFC1C1;
+    border-radius: 4px;
+    background-color: #FFFFFF;
+    width: 100%;
+    padding: 5px 12px;
+    outline: none;
+}
+.cstmSpcyDate label {
+    margin-right: 0px;
+    margin-bottom: 0px;
+}
+.cstmSpcyDate label span {
+    font-size: 14px;
+}
+.lifeLongChk label {
+    margin-right: 0px;
+    margin-bottom: 0px;
+}
+.lifeLongChk label span {
+    color: #404646;
+    font-family: Muli;
+    font-size: 14px;
+    font-weight: 600;
+    letter-spacing: 0;
+    line-height: 14px;
+}
+.consumeAt .react-time-picker{
+    width: 100%;
+}
+.consumeAt .react-time-picker__wrapper {
+    border: 1px solid #BFC1C1;
+    border-radius: 4px;
+    background-color: #FFFFFF;
+    width: 100%;
+    padding: 5px 12px;
+    outline: none;
+}
+.consumeAt p {
+    color: #00ABAF;
+    font-family: Muli;
+    font-size: 12px;
+    font-weight: bold;
+    letter-spacing: 0;
+    line-height: 12px;
+    margin-top: 12px;
+    text-align: right;
+}
+a.temp_c {
+    border-radius: 4px 0 0 4px;
+    background-color: #00ABAF;
+    color: #FFFFFF;
+    font-family: Muli;
+    font-size: 14px;
+    font-weight: bold;
+    letter-spacing: 0;
+    line-height: 14px;
+    text-align: center;
+    padding: 4px 6px;
+}
+a.temp_f {
+    border: 1px solid #BFC1C1;
+    border-radius: 0 4px 4px 0;
+    background-color: #FFFFFF;
+    color: #7F8383;
+    font-family: Muli;
+    font-size: 14px;
+    font-weight: bold;
+    letter-spacing: 0;
+    line-height: 14px;
+    text-align: center;
+    padding: 3px 6px;
+}
+.getTempInput {
+    position: relative;
+}
+.getTemp {
+    position: absolute;
+    right: 8px;
+    bottom: 9px;
+}
+
+/* -------------- */
+
+.prespBoxCntnt {
+    width: 420px;
+    background: #fff;
+    margin: 0 auto;
+    border: none;
+    outline: none;
+    border-radius: 12px;
+    background-color: #FFFFFF;
+    -webkit-box-shadow: 0 24px 32px 0 rgba(0,8,8,0.08);
+    box-shadow: 0 24px 32px 0 rgba(0,8,8,0.08);
+    margin-top: 35px;
+    padding-bottom: 8px;
+}
+.prespCourse {
+    padding: 12px 24px 18px 24px;
+    border-bottom: 1px solid #F2F2F2;
+}
+.prespCloseBtn {
+    text-align: right;
+    margin-bottom: 4px;
+}
+.prespCloseBtn img {
+    width: 26px;
+    cursor: pointer;
+}
+.prespCourse p {
+    color: #7F8383;
+    font-family: Muli;
+    font-size: 14px;
+    font-weight: 500;
+    letter-spacing: 0;
+    line-height: 18px;
+}
+.prespCourse label {
+    color: #000808;
+    font-family: Muli;
+    font-size: 20px;
+    font-weight: bold;
+    letter-spacing: 0;
+    line-height: 32px;
+    margin-bottom: 2px;
+}
+.detailPrescp {
+    padding: 18px 24px 10px 24px;
+    height: 452px;
+    overflow-y: scroll;
+    margin-right: 1px;
+}
+.stndQues span {
+    color: #000808;
+    font-family: Muli;
+    font-size: 14px;
+    font-weight: bold;
+    letter-spacing: 0;
+    line-height: 14px;
+    margin-bottom: 15px;
+    display: block;
+}
+.stndQues label {
+    color: #404646;
+    font-family: Muli;
+    font-size: 12px;
+    font-weight: 600;
+    letter-spacing: 0;
+    line-height: 12px;
+}
+.stndQues p {
+    color: #000808;
+    font-family: Muli;
+    font-size: 14px;
+    font-weight: 600;
+    letter-spacing: 0;
+    line-height: 14px;
+    margin-bottom: 6px;
+}
+.stndQues {
+    margin-bottom: 30px;
+}
+input.approvBtn {
+    border-radius: 8px;
+    background-color: #00ABAF;
+    outline: none;
+    color: #FFFFFF;
+    font-family: Muli;
+    font-size: 14px;
+    font-weight: bold;
+    letter-spacing: 0;
+    line-height: 16px;
+    text-align: center;
+    border: none;
+    width: 97%;
+    margin-right: 3%;
+    padding: 12px 10px;
+}
+input.rejectBtn {
+    outline: none;
+    font-family: Muli;
+    font-size: 14px;
+    font-weight: bold;
+    letter-spacing: 0;
+    line-height: 16px;
+    text-align: center;
+    border: none;
+    width: 97%;
+    margin-left: 3%;
+    padding: 12px 10px;
+    border-radius: 8px;
+    background-color: #E1F7F7;
+    color: #00abaf;
+    cursor: pointer !important;
+}
+
+.scamUPForms {
+    margin-bottom: 32px;
+}
+.scamUPForms label {
+    color: #404646;
+    font-family: Muli;
+    font-size: 12px;
+    font-weight: 600;
+    letter-spacing: 0;
+    line-height: 12px;
+}
+.scamUPInput {
+    position: relative;
+}
+.scamUPInput {
+    border: 2px dashed #BFC1C1;
+    border-radius: 4px;
+    background-color: #FFFFFF;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    min-height: 120px;
+    display: flex;
+    color: #7F8383;
+    font-family: Muli;
+    font-size: 14px;
+    font-weight: 600;
+    letter-spacing: 0;
+    line-height: 18px;
+}
+.scamUPInput a {
+    color: #00ABAF !important;
+    margin: 0px 4px;
+}
+.scamUPInput input[type="file"] {
+    opacity: 0;
+    position: absolute;
+    left: 0;
+    top: 45px;
+    z-index: 999;
+}
+.scamUPImg p {
+    color: #7F8383;
+    font-family: Muli;
+    font-size: 12px;
+    font-weight: 600;
+    letter-spacing: 0;
+    line-height: 12px;
+    text-align: center;
+    margin-top: 10px;
+    margin-bottom: 0px !important;
+}
+
 
 /*Added By ankita*/
+/*Components */
+.prfilHghtLft, .prfilHghtRght{
+    padding-left: 0% !important;
+}
+.FileInptJournal
+{
+    display : none;
+}
+.minus_span_medication {
+    color: #e11616 !important;
+}
+.profileInfoDate .ant-picker:hover, .profileInfoDate .ant-picker-focused {
+    border-color: #BFC1C1;
+    border-right-width: 1px !important;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+}
+.ant-picker {
+    border: 1px solid #BFC1C1;
+    border-radius: 4px;
+    background-color: #FFFFFF;
+    padding: 7px 4px;
+    outline: none;
+    width: 100%;
+    color: #000808;
+    font-family: Muli;
+    font-size: 14px;
+    font-weight: 600;
+    letter-spacing: 0;
+    line-height: 18px;
+}
 /*For LMS*/
 button.CutomStripeButton {
     background: #00ABAF !important;
