--- a/src/Screens/Components/CometChat/react-chat-ui-kit/CometChat/components/CometChatUnified/style.scss
+++ b/src/Screens/Components/CometChat/react-chat-ui-kit/CometChat/components/CometChatUnified/style.scss
@@ -31,7 +31,20 @@
     h1 {
       @include text-center;
     }
+    p{
+      @include text-center;
+      
   }
+  .CreatChatInner p{
+    color:gray !important;
+  }
+  
+  .CreatChatInner img{
+    align-self: center;
+    margin: 20% 40% 5%;
+    max-width: 20%;
+  }
+}
 
   .ccl-right-panel {
     float:right;
@@ -75,6 +88,8 @@
 	.ccl-right-panel.active {
 		right: 0!important;
     box-shadow: rgba(0,0,0,.4)-30px 0 30px 30px;
-	}
+  }
+  
+
 
 }
