--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -5917,6 +5917,10 @@ img.addBlue {
 .trckLogo img {
     height: 24px;
 }
+.trckLogo1 img {
+    height: auto;
+    max-width: 130px;
+}
 .trckDots img {
     height: 24px;
     border-radius: 5px;
@@ -6178,7 +6182,10 @@ a.openScndhrf {
     background-color: #F2F2F2;
     min-height: 232px;
     padding: 10% 12px;
+    height: 400px;
+    overflow: auto;
 }
+
 .archvDel ul li {
     list-style-type: none;
     margin: 3px 0px;
