--- a/src/assets/css/style_log.css
+++ b/src/assets/css/style_log.css
@@ -59,7 +59,7 @@ h1,h2,h3,h4,h5,h6,h7,p{ margin:0; padding:0; font-size: inherit; font-weight: in
     line-height: 20px;
     margin-bottom: 6px;
 }
-.registerForm input[type="text"], .registerForm input[type="password"] {
+.registerRow input[type="text"], .registerRow input[type="password"] {
     border-radius: 7px;
     background-color: #f1f2f2;
     padding: 10px 12px;
