--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -11737,6 +11737,9 @@ a.timSlotClose {
 
 
 /*Added By ankita*/
+.AddEntrynw a {
+    margin-left: 20px;
+}
 /*Paramedic Section*/
 .ProfileImage{
     width: 100%;
