--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -6178,6 +6178,8 @@ a.openScndhrf {
     background-color: #F2F2F2;
     min-height: 232px;
     padding: 10% 12px;
+    overflow: auto;
+    height: 400px;
 }
 .archvDel ul li {
     list-style-type: none;
