--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -12116,3 +12116,15 @@ input:focus {
     overflow-y: auto;
     position: relative;
   }
+
+  .success_message
+  {
+    padding-bottom: 15px;
+    text-align: center;
+    color: #00abaf !important;
+    font-weight: 900;
+  }
+  .success_message.withclose {
+    padding-top: 3%;
+    font-weight: 500!important;
+  }
