Changes for the profile and remove patient from doctor

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -12116,3 +12116,8 @@ input:focus {
     overflow-y: auto;
     position: relative;
   }
+
+  .wrkHour a.seleted-days {
+      color: #ffffff;
+      background-color:#00abaf;
+  }
