--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -9819,11 +9819,11 @@ img.vdoCalNow {
 .setSchedule {
     display: flex;
 }
-.setSchedule div:first-child {
+.setSchedule div.nameSchedule:first-child {
     width: 40%;
 }
-.setSchedule div:last-child {
-    width: 60%;
+.setSchedule div.nameSchedule:last-child {
+    width: 40%;
 }
 .setSchedule input {
     min-width: 43px;
@@ -12128,7 +12128,22 @@ input:focus {
     color: #00abaf !important;
     font-weight: 900;
   }
+
   .success_message.withclose {
     padding-top: 3%;
     font-weight: 500!important;
+  }
+
+  .appointment .ant-picker{
+    border: none;
+    outline: none;
+    padding: 0;
+    box-shadow: none;
+  }
+  .appointment .nameSchedule .ant-picker {
+      width: 70%;
+  }
+
+  .appointment .ant-picker-suffix{
+      display: none;
   }
