Fix for the service appointment of the doctor in profile and added the second opinion in my documents

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -12139,7 +12139,7 @@ input:focus {
   }
 
   .appointment .ant-picker{
-    border: none;
+    /* border: none; */
     outline: none;
     padding: 0;
     box-shadow: none;
