--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -11748,6 +11748,18 @@ a.timSlotClose {
 
 
 /*Added By ankita*/
+.nwDiaSel1 {
+    margin-top: 4px;
+    margin-left: -4px;
+    color: #000808;
+    font-family: Muli;
+    font-size: 20px;
+    font-weight: bold;
+    letter-spacing: 0;
+    line-height: 32px;
+    border: none;
+    outline: none;
+}
 .AddEntrynw a {
     margin-left: 20px;
 }
