--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -12151,3 +12151,58 @@ input:focus {
   .appointment .ant-picker-suffix{
       display: none;
   }
+
+  /* added by satish */
+
+  .languageBox {
+      margin: 2px 8px 10px 40px ;
+  }
+
+  .LanguageBoxMain {
+    width: 40% !important;
+    background: #fff;
+    margin: 10px;
+    border: none;
+    outline: none;
+    border-radius: 12px;
+    background-color: #FFFFFF;
+    box-shadow: 0 24px 32px 0 rgba(0,8,8,0.08);
+    margin-top: 35px;
+    position: absolute !important;
+}
+
+.LanguageBoxMain input[type="submit"] {
+    border-radius: 8px;
+    background-color: #00ABAF;
+    color: #FFFFFF;
+    font-family: Muli;
+    font-size: 14px;
+    font-weight: bold;
+    letter-spacing: 0;
+    line-height: 16px;
+    text-align: center;
+    padding: 13px 5px;
+    outline: none !important;
+    margin-left: 35%;
+    margin-bottom: 5px;
+}
+
+.LanguageBoxMain label{
+    margin-left: 10px !important;
+    font-size: 15px;
+}
+
+.languageHead {
+    padding: 15px;
+    text-align: center;
+    color: #00abaf !important;
+    font-weight: 500;
+    font-size: 18px
+  }
+
+  .lng_blank{
+    padding-bottom: 15px;
+    text-align: center;
+    color: #862d2d !important;
+    font-weight: 900;
+  }
