--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -11748,6 +11748,7 @@ a.timSlotClose {
 
 
 /*Added By ankita*/
+
 .lrlp {margin-top: 9px;}
 .nwDiaSel1 {
     margin-top: 4px;
@@ -11762,7 +11763,7 @@ a.timSlotClose {
     outline: none;
 }
 .AddEntrynw a {
-    margin-left: 20px;
+    margin: 10px;
 }
 /*Paramedic Section*/
 .ProfileImage{
