Fixes for the styles

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -12253,3 +12253,7 @@ input:focus {
    .getCalBnr .movMnth img {
        width: auto!important;
    }
+
+   .margin-remove {
+       margin-top: 0px;
+   }
